<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mohamedsallam.musicalstructureapp.MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="MAIN ACTIVITY"
        android:textSize="25sp"
        android:textStyle="bold"
        android:paddingBottom="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main"
        android:textSize="25sp"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/now_play"
        style="@style/button"
        android:text="@string/playnow" />
    <Button
        android:id="@+id/playlist"
        style="@style/button"
        android:text="@string/playlist" />
    <Button
        android:id="@+id/detail_artist"
        style="@style/button"
        android:text="Artist Details" />
    <Button
        android:id="@+id/buy_song"
        style="@style/button"
        android:text="@string/buy" />
</LinearLayout>
